--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -232,9 +232,9 @@ services:
 #      - "80:80"
       - "443:443"
 #      - "XXXX:8080"
-    environment:
-      - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
-      - CF_API_KEY=${CLOUDFLARE_API_KEY}
+    # environment:
+    #   - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
+    #   - CF_API_KEY=${CLOUDFLARE_API_KEY}
     labels:
       - "traefik.enable=true"
       - "traefik.backend=traefik"
@@ -254,8 +254,8 @@ services:
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${USERDIR}/docker/traefik:/etc/traefik
-      - ${USERDIR}/docker/shared:/shared
+      - /mnt/storage/appdata/traefik:/etc/traefik
+      - /mnt/storage/appdata/shared:/shared
 networks:
   traefik_proxy:
     external:
