--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -232,9 +232,9 @@ services:
 #      - "80:80"
       - "443:443"
 #      - "XXXX:8080"
-    # environment:
-    #   - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
-    #   - CF_API_KEY=${CLOUDFLARE_API_KEY}
+    environment:
+      - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
+      - CF_API_KEY=${CLOUDFLARE_API_KEY}
     labels:
       - "traefik.enable=true"
       - "traefik.backend=traefik"
