--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 ---
 version: '2'
 services:
-  heimdall:
-    image: linuxserver/heimdall
-    container_name: heimdall
-    volumes:
-      - /mnt/storage/appdata/heimdall/config:/config
-    ports:
-      - 80:80
-    restart: always
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
+  # heimdall:
+  #   image: linuxserver/heimdall
+  #   container_name: heimdall
+  #   volumes:
+  #     - /mnt/storage/appdata/heimdall/config:/config
+  #   ports:
+  #     - 80:80
+  #   restart: always
+  #   environment:
+  #     - PUID=${PUID}
+  #     - PGID=${PGID}
   sabnzbd:
     image: linuxserver/sabnzbd
     container_name: sabnzbd
@@ -19,26 +19,44 @@ services:
       - /mnt/storage/appdata/sabnzbd/config:/config
       - /mnt/storage/media/downloads:/downloads
       - /mnt/storage/media/incomplete-downloads:/incomplete-downloads
-    ports:
-      - 8080:8080
-      - 9090:9090
+      - /mnt/storage/appdata/shared:/shared
+    # ports:
+    #   - 8080:8080
+    #   - 9090:9090
     restart: always
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=America/Chicago
-  nzbhydra:
-    image: linuxserver/hydra
-    container_name: hydra
-    volumes:
-      - /mnt/storage/appdata/hydra/config:/config
-      - /mnt/storage/media/hydra-downloads:/downloads
-    ports:
-      - 5075:5075
-    restart: always
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=sabnzbd"
+      - "traefik.frontend.rule=Host:sabnzbd.${DOMAINNAME}"
+      - "traefik.port=8080"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
+  # nzbhydra:
+  #   image: linuxserver/hydra
+  #   container_name: hydra
+  #   volumes:
+  #     - /mnt/storage/appdata/hydra/config:/config
+  #     - /mnt/storage/media/hydra-downloads:/downloads
+  #   ports:
+  #     - 5075:5075
+  #   restart: always
+  #   environment:
+  #     - PUID=${PUID}
+  #     - PGID=${PGID}
   plex:
     image: linuxserver/plex
     container_name: plex
@@ -51,13 +69,42 @@ services:
       - /mnt/storage/media/exercisevideos:/data/exercisevideos
       - /mnt/storage/media/movies:/data/movies
       - /mnt/storage/media/TEMP_POSTPROCESSING:/transcode
+      - /mnt/storage/appdata/shared:/shared
     network_mode: host
     restart: always
     environment:
       - VERSION=public
       - PUID=${PUID}
       - PGID=${PGID}
+      # - PLEX_CLAIM="claim-YYYYYYYYY"
       - TZ=America/Chicago
+      - ADVERTISE_IP="http://SERVER-IP:32400/"
+    ports:
+      - "32400:32400/tcp"
+      - "3005:3005/tcp"
+      - "8324:8324/tcp"
+      - "32469:32469/tcp"
+      - "1900:1900/udp"
+      - "32410:32410/udp"
+      - "32412:32412/udp"
+      - "32413:32413/udp"
+      - "32414:32414/udp"
+   labels:
+      - "traefik.enable=true"
+      - "traefik.backend=plexms"
+      - "traefik.frontend.rule=Host:plex.${DOMAINNAME}"
+      - "traefik.port=32400"
+      - "traefik.protocol=http"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   tautulli:
     image: linuxserver/tautulli
     container_name: tautulli
@@ -66,8 +113,9 @@ services:
     volumes:
       - /mnt/storage/appdata/plexpy:/config
       - /mnt/storage/appdata/plex/Library/Application\ Support/Plex\ Media\ Server/Logs:/logs:ro
-    ports:
-      - 8181:8181
+      - /mnt/storage/appdata/shared:/shared
+    # ports:
+    #   - 8181:8181
     links:
       - plex
     restart: always
@@ -75,6 +123,21 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=America/Chicago
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=tautulli"
+      - "traefik.frontend.rule=Host:tautulli.${DOMAINNAME}"
+      - "traefik.port=8181"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   sonarr:
     image: linuxserver/sonarr
     container_name: sonarr
@@ -86,14 +149,32 @@ services:
       - /mnt/storage/media/downloads:/downloads
       - /mnt/storage/media/tv_import:/tv_import
       - /mnt/storage/media/download-reprocess:/download-reprocess
-    ports:
-      - 8989:8989
+      - /mnt/storage/appdata/shared:/shared
+    # ports:
+    #   - 8989:8989
     links:
       - sabnzbd
     restart: always
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=sonarr"
+      - "traefik.frontend.rule=Host:sonarr.${DOMAINNAME}"
+      - "traefik.port=8989"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   radarr:
     image: linuxserver/radarr
     container_name: radarr
@@ -102,43 +183,58 @@ services:
       - /mnt/storage/appdata/radarr:/config
       - /mnt/storage/media/movies:/movies
       - /mnt/storage/media/downloads:/downloads
-    ports:
-      - 7878:7878
+      - /mnt/storage/appdata/shared:/shared
+    # ports:
+    #   - 7878:7878
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
     restart:
       always
-#  letsencrypt:
-#    image: linuxserver/letsencrypt
-#    container_name: letsencrypt
-#    ports:
-#      - 443:443
-#    volumes:
-#      - /mnt/storage/appdata/letsencrypt:/config
-#    restart:
-#      always
-#    environment:
-#      - VALIDATION=dns
-#      - PUID=${PUID}
-#      - PGID=${PGID}
-#      - EMAIL=
-#      - URL=
-#      - SUBDOMAINS=wildcard
-#      - ONLY_SUBDOMAINS=false
-#      - DNSPLUGIN=tls-sni
-#      - DHLEVEL=4096
-#      - TZ=America/Chicago
+      networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=radarr"
+\      - "traefik.frontend.rule=Host:radarr.${DOMAINNAME}"
+      - "traefik.port=7878"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   portainer:
     image: portainer/portainer
     container_name: portainer
-    ports:
-      - 9000:9000
+    # ports:
+    #   - 9000:9000
     volumes:
       - /mnt/storage/appdata/portainer:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart:
       always
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=portainer"
+      - "traefik.frontend.rule=Host:portainer.${DOMAINNAME}"  
+      - "traefik.port=9000"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   ouroboros:
     container_name: ouroboros
 #    hostname: 
@@ -169,18 +265,6 @@ services:
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
-  trilium:
-    image: zadam/trilium
-    container_name: trilium
-    ports:
-      - 7777:8080 
-    volumes:
-      - /mnt/storage/appdata/trilium-data:/root/trilium-data
-    restart:
-      always
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
   netdata:
     container_name: netdata
     image: netdata/netdata
@@ -194,17 +278,6 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-  htpcmanager:
-    container_name: htpcmanager
-    image: linuxserver/htpcmanager
-    ports:
-      - 8085:8085
-    environment:
-      - TZ=America/Chicago
-      - PUID=${PUID}
-      - PGID=${PGID}
-    volumes:
-      - /mnt/storage/appdata/htpmanager:/config
   mylar:
     container_name: mylar
     ports:
@@ -219,6 +292,23 @@ services:
       - /mnt/storage/media/downloads/:/downloads
       - /mnt/storage/media/comics:/comics
       - /mnt/storage/media/comics-import:/comics-import
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=portainer"
+      - "traefik.frontend.rule=Host:portainer.${DOMAINNAME}"  
+      - "traefik.port=9000"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
   traefik:
     hostname: traefik
     image: traefik:latest
@@ -239,7 +329,6 @@ services:
       - "traefik.enable=true"
       - "traefik.backend=traefik"
       - "traefik.frontend.rule=Host:traefik.${DOMAINNAME}"  
-#      - "traefik.frontend.rule=Host:${DOMAINNAME}; PathPrefixStrip: /traefik"
       - "traefik.port=8080"
       - "traefik.docker.network=traefik_proxy"
       - "traefik.frontend.headers.SSLRedirect=true"
@@ -256,6 +345,36 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /mnt/storage/appdata/traefik:/etc/traefik
       - /mnt/storage/appdata/shared:/shared
+  organizr:
+    container_name: organizr
+    restart: always
+    image: lsiocommunity/organizr
+    volumes:
+      - /mnt/storage/appdata/organizr:/config
+      - /mnt/storage/appdata/shared:/shared
+#    ports:
+#      - "XXXX:80"
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=organizr"
+      - "traefik.frontend.rule=Host:organizr.${DOMAINNAME}"  
+      - "traefik.port=80"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=true"
 networks:
   traefik_proxy:
     external:
