--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -196,7 +196,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.backend=radarr"
-\      - "traefik.frontend.rule=Host:radarr.${DOMAINNAME}"
+      - "traefik.frontend.rule=Host:radarr.${DOMAINNAME}"
       - "traefik.port=7878"
       - "traefik.docker.network=traefik_proxy"
       - "traefik.frontend.headers.SSLRedirect=true"
