--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -367,7 +367,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.backend=organizr"
-      - "traefik.frontend.rule=Host:organizr.${DOMAINNAME}"  
+      # - "traefik.frontend.rule=Host:organizr.${DOMAINNAME}"  
+      - "traefik.frontend.rule=Host:${DOMAINNAME}"  
       - "traefik.port=80"
       - "traefik.docker.network=traefik_proxy"
       - "traefik.frontend.headers.SSLRedirect=true"
