--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,14 @@
 ---
 version: '2'
 services:
-  # heimdall:
-  #   image: linuxserver/heimdall
-  #   container_name: heimdall
-  #   volumes:
-  #     - /mnt/storage/appdata/heimdall/config:/config
-  #   ports:
-  #     - 80:80
-  #   restart: always
-  #   environment:
-  #     - PUID=${PUID}
-  #     - PGID=${PGID}
   sabnzbd:
     image: linuxserver/sabnzbd
     container_name: sabnzbd
     volumes:
       - /mnt/storage/appdata/sabnzbd/config:/config
-      - /mnt/storage/media/downloads:/downloads
-      - /mnt/storage/media/incomplete-downloads:/incomplete-downloads
-      - /mnt/storage/appdata/shared:/shared
-    # ports:
-    #   - 8080:8080
-    #   - 9090:9090
+      - incomplete-downloads:/incomplete-downloads
+      - downloads:/downloads
+      - shared:/shared
     restart: always
     environment:
       - PUID=${PUID}
@@ -44,33 +30,19 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
-  # nzbhydra:
-  #   image: linuxserver/hydra
-  #   container_name: hydra
-  #   volumes:
-  #     - /mnt/storage/appdata/hydra/config:/config
-  #     - /mnt/storage/media/hydra-downloads:/downloads
-  #   ports:
-  #     - 5075:5075
-  #   restart: always
-  #   environment:
-  #     - PUID=${PUID}
-  #     - PGID=${PGID}
+      - "traefik.frontend.headers.frameDeny=false"
   plex:
     image: linuxserver/plex
     container_name: plex
     volumes:
-      - /mnt/storage/media/download-reprocess:/download-reprocess
       - /mnt/storage/appdata/plex:/config
-      - /mnt/storage-usb/media/tv:/data/tvshows
-      - /mnt/storage/media/homemovies:/data/homemovies
-      - /mnt/storage/media/photos:/data/photos
-      - /mnt/storage/media/exercisevideos:/data/exercisevideos
-      - /mnt/storage/media/movies:/data/movies
       - /mnt/storage/media/TEMP_POSTPROCESSING:/transcode
-      - /mnt/storage/appdata/shared:/shared
-    # network_mode: host
+      - tv:/data/tvshows
+      - homemovies:/data/homemovies
+      - photos:/data/photos
+      - exercisevideos:/data/exercisevideos
+      - movies:/data/movies
+      - shared:/shared
     restart: always
     networks:
       - traefik_proxy
@@ -106,7 +78,7 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
   tautulli:
     image: linuxserver/tautulli
     container_name: tautulli
@@ -115,9 +87,7 @@ services:
     volumes:
       - /mnt/storage/appdata/plexpy:/config
       - /mnt/storage/appdata/plex/Library/Application\ Support/Plex\ Media\ Server/Logs:/logs:ro
-      - /mnt/storage/appdata/shared:/shared
-    # ports:
-    #   - 8181:8181
+      - shared:/shared
     networks:
       - traefik_proxy
     links:
@@ -141,7 +111,7 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
   sonarr:
     image: linuxserver/sonarr
     container_name: sonarr
@@ -149,13 +119,10 @@ services:
       - sabnzbd
     volumes:
       - /mnt/storage/appdata/sonarr:/config
-      - /mnt/storage-usb/media/tv:/tv
-      - /mnt/storage/media/downloads:/downloads
       - /mnt/storage/media/tv_import:/tv_import
-      - /mnt/storage/media/download-reprocess:/download-reprocess
-      - /mnt/storage/appdata/shared:/shared
-    # ports:
-    #   - 8989:8989
+      - tv:/tv
+      - downloads:/downloads
+      - shared:/shared
     links:
       - sabnzbd
     restart: always
@@ -178,18 +145,15 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
   radarr:
     image: linuxserver/radarr
     container_name: radarr
     volumes:
-      - /mnt/storage/media/download-reprocess:/download-reprocess
       - /mnt/storage/appdata/radarr:/config
-      - /mnt/storage/media/movies:/movies
-      - /mnt/storage/media/downloads:/downloads
-      - /mnt/storage/appdata/shared:/shared
-    # ports:
-    #   - 7878:7878
+      - movies:/movies
+      - downloads:/downloads
+      - shared:/shared
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -211,12 +175,10 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
   portainer:
     image: portainer/portainer
     container_name: portainer
-    # ports:
-    #   - 9000:9000
     volumes:
       - /mnt/storage/appdata/portainer:/data
       - /var/run/docker.sock:/var/run/docker.sock
@@ -238,7 +200,7 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
   ouroboros:
     container_name: ouroboros
 #    hostname: 
@@ -256,24 +218,66 @@ services:
   ubooquity:
     image: linuxserver/ubooquity
     container_name: ubooquity
-    ports:
-      - 2202:2202
-      - 2203:2203
     volumes:
       - /mnt/storage/appdata/ubooquity:/config
-      - /mnt/storage/media/downloads/:/files
-      - /mnt/storage/media/books:/books
-      - /mnt/storage/media/comics:/comics
+      - downloads/:/files
+      - books:/books
+      - comics:/comics
     restart:
       always
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=ubooquity"
+      - "traefik.frontend.rule=Host:ubooquity.${DOMAINNAME}"  
+      - "traefik.port=2202"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=false"
+  ubooquity-admin:
+    image: linuxserver/ubooquity
+    container_name: ubooquity
+    volumes:
+      - /mnt/storage/appdata/ubooquity:/config
+      - downloads/:/files
+      - books:/books
+      - comics:/comics
+    restart:
+      always
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=ubooquity-admin"
+      - "traefik.frontend.rule=Host:ubooquity-admin.${DOMAINNAME}"  
+      - "traefik.port=2203"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=false"
   netdata:
     container_name: netdata
     image: netdata/netdata
-    ports:
-      - 19999:19999
     cap_add:
       - SYS_PTRACE
     security_opt:
@@ -282,10 +286,25 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - traefik_proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=mylar"
+      - "traefik.frontend.rule=Host:netdata.${DOMAINNAME}"  
+      - "traefik.port=19999"
+      - "traefik.docker.network=traefik_proxy"
+      - "traefik.frontend.headers.SSLRedirect=true"
+      - "traefik.frontend.headers.STSSeconds=315360000"
+      - "traefik.frontend.headers.browserXSSFilter=true"
+      - "traefik.frontend.headers.contentTypeNosniff=true"
+      - "traefik.frontend.headers.forceSTSHeader=true"
+      - "traefik.frontend.headers.SSLHost=example.com"
+      - "traefik.frontend.headers.STSIncludeSubdomains=true"
+      - "traefik.frontend.headers.STSPreload=true"
+      - "traefik.frontend.headers.frameDeny=false"
   mylar:
     container_name: mylar
-    # ports:
-      # - 8090:8090
     environment:
       - TZ=America/Chicago
       - PUID=${PUID}
@@ -293,9 +312,9 @@ services:
     image: linuxserver/mylar
     volumes:
       - /mnt/storage/appdata/mylar:/config
-      - /mnt/storage/media/downloads/:/downloads
-      - /mnt/storage/media/comics:/comics
       - /mnt/storage/media/comics-import:/comics-import
+      - downloads/:/downloads
+      - comics:/comics
     networks:
       - traefik_proxy
     labels:
@@ -312,7 +331,7 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
   traefik:
     hostname: traefik
     image: traefik:latest
@@ -325,7 +344,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      # - "8082:8080"
     environment:
       - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
       - CF_API_KEY=${CLOUDFLARE_API_KEY}
@@ -343,21 +361,19 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /mnt/storage/appdata/traefik:/etc/traefik
-      - /mnt/storage/appdata/shared:/shared
+      - shared:/shared
   organizr:
     container_name: organizr
     restart: always
     image: lsiocommunity/organizr
     volumes:
       - /mnt/storage/appdata/organizr:/config
-      - /mnt/storage/appdata/shared:/shared
-#    ports:
-#      - "XXXX:80"
+      - shared:/shared
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -367,7 +383,6 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.backend=organizr"
-      # - "traefik.frontend.rule=Host:organizr.${DOMAINNAME}"  
       - "traefik.frontend.rule=Host:${DOMAINNAME}"  
       - "traefik.port=80"
       - "traefik.docker.network=traefik_proxy"
@@ -379,7 +394,58 @@ services:
       - "traefik.frontend.headers.SSLHost=example.com"
       - "traefik.frontend.headers.STSIncludeSubdomains=true"
       - "traefik.frontend.headers.STSPreload=true"
-      - "traefik.frontend.headers.frameDeny=true"
+      - "traefik.frontend.headers.frameDeny=false"
+volumes:
+  exercisevideos:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/exercisevideos
+      o: bind
+  home_movies:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/homemovies
+      o: bind
+  photos:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/photos
+      o: bind
+  movies:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/movies
+      o: bind
+  books:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/books
+      o: bind
+  comics:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/comics
+      o: bind
+  tv:
+    driver_opts:
+      type: none
+      device: /mnt/storage-usb/media/tv
+      o: bind
+  complete_downloads:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/downloads/complete
+      o: bind
+  incomplete_downloads:
+    driver_opts:
+      type: none
+      device: /mnt/storage/media/downloads/incomplete
+      o: bind
+  shared:
+    driver_opts:
+      type: none
+      device: /mnt/storage/appdata/shared
+      o: bind
 networks:
   traefik_proxy:
     external:
