--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: linuxserver/sabnzbd
     container_name: sabnzbd
     volumes:
-      - /mnt/storage/appdata/sabnzbd/config:/config
-      - incomplete-downloads:/incomplete-downloads
-      - complete_downloads:/downloads
-      - shared:/shared
+      -/mnt/storage/appdata/sabnzbd/config:/config
+      -incomplete-downloads:/incomplete-downloads
+      -complete_downloads:/downloads
+      -shared:/shared
     restart: always
     environment:
       - PUID=${PUID}
