--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 --- 
+version: "2"
 networks: 
   default: 
     driver: bridge
@@ -34,7 +35,7 @@ services:
       - "/mnt/storage/appdata/mylar:/config"
       - "/mnt/storage/media/comics-import:/comics-import"
       - "/mnt/storage/media/downloads:/downloads"
-      - "comics:/comics"
+      - "/mnt/storage/media/comics:/comics"
   netdata: 
     cap_add: 
       - SYS_PTRACE
@@ -90,7 +91,7 @@ services:
     restart: always
     volumes: 
       - "/mnt/storage/appdata/organizr:/config"
-      - "shared:/shared"
+      - "/mnt/storage/appdata/shared:/shared"
   ouroboros: 
     container_name: ouroboros
     environment: 
@@ -145,12 +146,12 @@ services:
     volumes: 
       - "/mnt/storage/appdata/plex:/config"
       - "/mnt/storage/media/TEMP_POSTPROCESSING:/transcode"
-      - "tv:/data/tvshows"
+      - "/mnt/storage-usb/media/tv:/data/tvshows"
       - "/mnt/storage/media/homemovies:/data/homemovies"
-      - "photos:/data/photos"
-      - "exercisevideos:/data/exercisevideos"
-      - "movies:/data/movies"
-      - "shared:/shared"
+      - "/mnt/storage/media/photos:/data/photos"
+      - "/mnt/storage/media/exercisevideos:/data/exercisevideos"
+      - "/mnt/storage/media/movies:/data/movies"
+      - "/mnt/storage/appdata/shared:/shared"
   portainer: 
     container_name: portainer
     image: portainer/portainer
@@ -201,9 +202,9 @@ services:
     restart: always
     volumes: 
       - "/mnt/storage/appdata/radarr:/config"
-      - "movies:/movies"
+      - "/mnt/storage/media/movies:/movies"
       - "/mnt/storage/media/downloads:/downloads"
-      - "shared:/shared"
+      - "/mnt/storage/appdata/shared:/shared"
   sabnzbd: 
     container_name: sabnzbd
     environment: 
@@ -233,7 +234,7 @@ services:
       - "/mnt/storage/appdata/sabnzbd/config:/config"
       - "/mnt/storage/media/incomplete-downloads:/incomplete-downloads"
       - "/mnt/storage/media/downloads:/downloads"
-      - "shared:/shared"
+      - "/mnt/storage/appdata/shared:/shared"
   sonarr: 
     container_name: sonarr
     depends_on: 
@@ -265,9 +266,9 @@ services:
     volumes: 
       - "/mnt/storage/appdata/sonarr:/config"
       - "/mnt/storage/media/tv_import:/tv_import"
-      - "tv:/tv"
+      - "/mnt/storage-usb/media/tv:/tv"
       - "/mnt/storage/media/downloads:/downloads"
-      - "shared:/shared"
+      - "/mnt/storage/appdata/shared:/shared"
   tautulli: 
     container_name: tautulli
     depends_on: 
@@ -300,7 +301,7 @@ services:
     volumes: 
       - "/mnt/storage/appdata/plexpy:/config"
       - "/mnt/storage/appdata/plex/Library/Application\\ Support/Plex\\ Media\\ Server/Logs:/logs:ro"
-      - "shared:/shared"
+      - "/mnt/storage/appdata/shared:/shared"
   traefik: 
     container_name: traefik
     domainname: "${DOMAINNAME}"
@@ -335,7 +336,7 @@ services:
     volumes: 
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "/mnt/storage/appdata/traefik:/etc/traefik"
-      - "shared:/shared"
+      - "/mnt/storage/appdata/shared:/shared"
   ubooquity: 
     container_name: ubooquity
     environment: 
@@ -363,8 +364,8 @@ services:
     volumes: 
       - "/mnt/storage/appdata/ubooquity:/config"
       - "/mnt/storage/media/downloads:/files"
-      - "books:/books"
-      - "comics:/comics"
+      - "/mnt/storage/media/books:/books"
+      - "/mnt/storage/media/comics:/comics"
   ubooquity-admin: 
     container_name: ubooquity
     environment: 
@@ -392,43 +393,5 @@ services:
     volumes: 
       - "/mnt/storage/appdata/ubooquity:/config"
       - "/mnt/storage/media/downloads:/files"
-      - "books:/books"
-      - "comics:/comics"
-version: "2"
-volumes: 
-  books: 
-    driver_opts: 
-      device: /mnt/storage/media/books
-      o: bind
-      type: none
-  comics: 
-    driver_opts: 
-      device: /mnt/storage/media/comics
-      o: bind
-      type: none
-
-  exercisevideos: 
-    driver_opts: 
-      device: /mnt/storage/media/exercisevideos
-      o: bind
-      type: none
-  movies: 
-    driver_opts: 
-      device: /mnt/storage/media/movies
-      o: bind
-      type: none
-  photos: 
-    driver_opts: 
-      device: /mnt/storage/media/photos
-      o: bind
-      type: none
-  shared: 
-    driver_opts: 
-      device: /mnt/storage/appdata/shared
-      o: bind
-      type: none
-  tv: 
-    driver_opts: 
-      device: /mnt/storage-usb/media/tv
-      o: bind
-      type: none
+      - "/mnt/storage/media/books:/books"
+      - "/mnt/storage/media/comics:/comics"
