putting plex back into host networking mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,43 +105,26 @@ services:
     restart: unless-stopped
     volumes: 
       - "/var/run/docker.sock:/var/run/docker.sock"
-  plex: 
-    container_name: plex
-    environment: 
-      - VERSION=public
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-      - TZ=America/Chicago
-      - "ADVERTISE_IP=\"http://SERVER-IP:32400/\""
+  plex:
     image: linuxserver/plex
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=plexms
-      - "traefik.frontend.rule=Host:plex.${DOMAINNAME}"
-      - traefik.port=32400
-      - traefik.protocol=http
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=example.com
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
-    networks: 
-      - traefik_proxy
-    ports: 
-      - "32400:32400/tcp"
-      - "3005:3005/tcp"
-      - "8324:8324/tcp"
-      - "32469:32469/tcp"
-      - "1900:1900/udp"
-      - "32410:32410/udp"
-      - "32412:32412/udp"
-      - "32413:32413/udp"
-      - "32414:32414/udp"
+    container_name: plex
+    volumes:
+      - /mnt/storage/media/download-reprocess:/download-reprocess
+      - /mnt/storage/appdata/plex:/config
+      - /mnt/storage-usb/media/tv:/data/tvshows
+      - /mnt/storage/media/homemovies:/data/homemovies
+      - /mnt/storage/media/photos:/data/photos
+      - /mnt/storage/media/exercisevideos:/data/exercisevideos
+      - /mnt/storage/media/movies:/data/movies
+      - /mnt/storage/media/TEMP_POSTPROCESSING:/transcode
+    network_mode: host
+    restart: always
+    environment:
+      - VERSION=public
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=America/Chicago
+    network_mode: host
     restart: always
     volumes: 
       - "/mnt/storage/appdata/plex:/config"
@@ -152,6 +135,34 @@ services:
       - "/mnt/storage/media/exercisevideos:/data/exercisevideos"
       - "/mnt/storage/media/movies:/data/movies"
       - "/mnt/storage/appdata/shared:/shared"
+    # labels: 
+    #   - traefik.enable=true
+    #   - traefik.backend=plexms
+    #   - "traefik.frontend.rule=Host:plex.${DOMAINNAME}"
+    #   - traefik.port=32400
+    #   - traefik.protocol=http
+    #   - traefik.docker.network=traefik_proxy
+    #   - traefik.frontend.headers.SSLRedirect=true
+    #   - traefik.frontend.headers.STSSeconds=315360000
+    #   - traefik.frontend.headers.browserXSSFilter=true
+    #   - traefik.frontend.headers.contentTypeNosniff=true
+    #   - traefik.frontend.headers.forceSTSHeader=true
+    #   - traefik.frontend.headers.SSLHost=example.com
+    #   - traefik.frontend.headers.STSIncludeSubdomains=true
+    #   - traefik.frontend.headers.STSPreload=true
+    #   - traefik.frontend.headers.frameDeny=false
+    # networks: 
+    #   - traefik_proxy
+    # ports: 
+    #   - "32400:32400/tcp"
+    #   - "3005:3005/tcp"
+    #   - "8324:8324/tcp"
+    #   - "32469:32469/tcp"
+    #   - "1900:1900/udp"
+    #   - "32410:32410/udp"
+    #   - "32412:32412/udp"
+    #   - "32413:32413/udp"
+    #   - "32414:32414/udp"
   portainer: 
     container_name: portainer
     image: portainer/portainer
