networking for phlex

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ networks:
 services: 
   phlex:
     container_name: phlex
+    networks: 
+      - bridge
     environment:
       - TZ=America/Chicago
       - "PUID=${PUID}"
